--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "homepage": "https://leocards.github.io/lvc_web_portfolio",
     "name": "lvc_web_portfolio",
     "private": true,
     "version": "0.0.0",
@@ -7,7 +8,9 @@
         "dev": "vite",
         "build": "tsc && vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "predeploy" : "npm run build",
+        "deploy" : "gh-pages -d build"
     },
     "dependencies": {
         "@radix-ui/react-dialog": "^1.0.5",
@@ -36,6 +39,7 @@
         "eslint": "^8.57.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.6",
+        "gh-pages": "^6.1.1",
         "postcss": "^8.4.38",
         "tailwindcss": "^3.4.3",
         "typescript": "^5.2.2",
