--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://leocards.github.io/lvc_web_portfolio",
+    "homepage": "http://leocards.github.io/lvc_web_portfolio",
     "name": "lvc_web_portfolio",
     "private": true,
     "version": "0.0.0",
@@ -10,7 +10,7 @@
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview",
         "predeploy" : "npm run build",
-        "deploy" : "gh-pages -d build"
+        "deploy" : "gh-pages -d dist"
     },
     "dependencies": {
         "@radix-ui/react-dialog": "^1.0.5",
