--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
         "build": "tsc && vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview",
-        "predeploy" : "npm run build",
-        "deploy" : "gh-pages -d dist"
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d dist"
     },
     "dependencies": {
         "@radix-ui/react-dialog": "^1.0.5",
@@ -25,6 +25,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.51.3",
+        "react-intersection-observer": "^9.8.2",
         "tailwind-merge": "^2.2.2",
         "tailwindcss-animate": "^1.0.7",
         "vaul": "^0.9.0"
