--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "deploy": "gh-pages -d dist"
     },
     "dependencies": {
+        "@emailjs/browser": "^4.3.3",
         "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-dropdown-menu": "^2.0.6",
         "@radix-ui/react-label": "^2.0.2",
@@ -26,6 +27,8 @@
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.51.3",
         "react-intersection-observer": "^9.8.2",
+        "sweetalert2": "^11.10.8",
+        "sweetalert2-react-content": "^5.0.7",
         "tailwind-merge": "^2.2.2",
         "tailwindcss-animate": "^1.0.7",
         "vaul": "^0.9.0"
